update canonical url

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://phlipper.github.com
+url: http://phlippers.net
 title: phlipper's (dot) net
 subtitle: "if it's on the 'net, it must be true"
 author: Phil Cohen
